Revert "AW-5714 Fix z-index for tooltip and deputy detail-page"
This reverts commit d6afa5c0fb1f676dfe518f54e4f6e57712c4234e.

--- a/src/scss/_deputy.scss
+++ b/src/scss/_deputy.scss
@@ -117,6 +117,7 @@
   }
   header {
     position: relative;
+    z-index: 500;
     .dropdown--default,
     .select2 {
       margin-bottom: $space-large;
